# napari-n2v

./: .gitignore  LICENSE  MANIFEST.in  README.md  codecov.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tf_test_env.yml  tox.ini
.github/workflows/: pages.yml  python-package.yml  test_and_deploy.yml
.napari/: DESCRIPTION.md
docs/: _config.yml  documentation.md  examples.md  faq.md  index.md  installation.md
envs/: README.md  tf_old_test_env.yml  tf_recent_test_env.yml
napari_n2v/: _dock_widget.py
napari_n2v/_tests/: test_dock_widget.py
scripts/: start_plugin.py
src/napari_n2v/: __init__.py  _dock_widget.py  _n2v_widget.py  _predict_widget.py  _sample_data.py  _tbplot_widget.py  _train_widget.py  _version.py  napari.yaml
src/napari_n2v/_tests/: test_axes_widget.py  test_dock_widget.py  test_expert_settings.py  test_io_utils.py  test_load_images_utils.py  test_n2v_utils.py  test_prediction_worker.py  test_resources.py  test_training_worker.py  test_utils.py
src/napari_n2v/examples/: rgb.py  structN2V.py
src/napari_n2v/resources/: TF_legal_mention.txt  __init__.py  resources.py
src/napari_n2v/utils/: __init__.py  expert_settings.py  io_utils.py  load_images_utils.py  loading_worker.py  n2v_utils.py  prediction_worker.py  training_worker.py
src/napari_n2v/widgets/: __init__.py  axes_widget.py  banner_widget.py  expert_settings_widget.py  folder_widget.py  gpu_widget.py  magicgui_widgets.py  qt_widgets.py  scroll_wrapper.py  tbplot_widget.py
