[metadata]
name = napari-n2v
version = 0.0.4
author = Tom Burke, Joran Deschamps
author_email = joran.deschamps@fht.org
url = https://github.com/juglab/napari-n2v
license = BSD-3-Clause
description = A self-supervised denoising algorithm now usable by all in napari.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Framework :: napari
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/juglab/napari-n2v/issues
    Documentation = https://juglab.github.io/napari-n2v/
    Source Code = https://github.com/juglab/napari-n2v
    User Support = https://github.com/juglab/napari-n2v/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    # h5py (dep of csbdeep and tensorflow) version <3.0 (Python 3.8) is incompatible with numpy>=1.14
    numpy<1.24.0; python_version<'3.9'
    numpy; python_version>='3.9'

    scikit-image
    bioimageio.core
    n2v>=0.3.2

    # dependency for compatibility with napari-workflows
    napari_time_slicer >= 0.4.9

    # Also compatibility with napari-workflows
    # TODO: it might be better to refactor the napari-workflow code to another repo that would call napari-n2 so that
    # TODO: the dependencies would be a bit more relaxed.
    # TODO: pin napari to <=0.4.15? vispy<=0.9.6?
    # pin napari and vispy because
    # https://github.com/napari/napari/issues/4415
    # https://github.com/napari/napari/issues/4708
    napari<=0.4.15
    vispy<=0.9.6
    magicgui
    qtpy
    pyqtgraph

    # fix to prevent failing tests
    # see https://github.com/napari/napari/pull/5168
    # and https://github.com/napari/napari/commit/c42e5ee2d1afd1f26944de3c0657e7bbc813b7d1
    imageio>=2.5.0,!=2.11.0,!=2.22.1

    # tensorflow
    tensorflow>=2.7.0; platform_system!="Darwin" or platform_machine!="arm64"
    tensorflow-macos; platform_system=="Darwin" and platform_machine=="arm64"
    tensorflow-metal; platform_system=="Darwin" and platform_machine=="arm64"

    # protobuf is a dependency of TensorFlow but the latest versions (>3.20) generate
    # errors with npe2. As of TensorFlow 2.10, protobuf<3.20 and >=3.9.2 is enforced.
    # Here we set the requirements to be compatible with TF2.8 to TF2.10.
    protobuf<3.20,>=3.9.2

[options.extras_require]
testing =
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    pyqt5

[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari-n2v = napari_n2v:napari.yaml
napari.plugin =
    napari-n2v_2 = napari_n2v.utils.n2v_utils
